<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>cloudsystem</artifactId>
        <groupId>de.cloud</groupId>
        <version>2.0.0-RELEASE</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>cloudsystem-base</artifactId>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <maven.build.timestamp.format>dd.MM.yyyy</maven.build.timestamp.format>
    </properties>

    <dependencies>
        <dependency>
            <groupId>de.cloud</groupId>
            <artifactId>cloudsystem-api</artifactId>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>de.cloud</groupId>
            <artifactId>cloudsystem-modules</artifactId>
            <version>2.0.0-RELEASE</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>de.cloud</groupId>
            <artifactId>cloudsystem-network</artifactId>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>de.cloud</groupId>
            <artifactId>cloudsystem-database</artifactId>
            <version>${project.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>de.cloud</groupId>
            <artifactId>cloudsystem-rest</artifactId>
            <version>${project.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>io.netty</groupId>
            <artifactId>netty-transport-native-epoll</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>io.netty</groupId>
            <artifactId>netty-codec</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.jline</groupId>
            <artifactId>jline</artifactId>
            <version>3.26.3</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.fusesource.jansi</groupId>
            <artifactId>jansi</artifactId>
            <version>2.4.1</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>${jannotations.version}</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>

        <sourceDirectory>${basedir}/src/main/java/</sourceDirectory>
        <!-- Resources -->
        <resources>
            <resource>
                <targetPath>.</targetPath>
                <filtering>true</filtering>
                <directory>${basedir}/src/main/resources/</directory>
            </resource>
            <resource>
                <directory>${basedir}/../cloudsystem-wrapper/target</directory>
                <includes>
                    <include>wrapper.jar</include>
                </includes>
            </resource>
            <resource>
                <directory>${basedir}/../cloudsystem-plugin/target</directory>
                <includes>
                    <include>plugin.jar</include>
                </includes>
            </resource>
        </resources>
        <plugins>
            <!-- JAR creation plugin -->
            <plugin>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.4.2</version>
                <configuration>
                    <archive>
                        <manifestEntries>
                            <Implementation-Version>${project.version}</Implementation-Version>
                            <version-date>${maven.build.timestamp}</version-date>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.3.1</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.6.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <finalName>cloudsystem-base</finalName>
                    <createDependencyReducedPom>false</createDependencyReducedPom>
                    <shadedArtifactAttached>true</shadedArtifactAttached>
                </configuration>
            </plugin>
        </plugins>
    </build>


</project>
